<resources>
    <string name="app_name">Quizy</string>
    <string name="magicword">tree</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="baseUrl">http://10.0.2.2:8080"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_title">Select Answer</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <string name="title_activity_score">ScoreActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget">Forget</string>
    <string name="refresh">Refresh</string>
    <string name="comment">Comment</string>
    <string name="create_course">Create Course</string>
    <string name="course_name">COURSE NAME</string>
    <string name="course_description">COURSE DESCRIPTION</string>
    <string name="create_game">Create Game</string>
    <string name="game_name">GAME NAME</string>
    <string name="game_description">GAME DESCRIPTION</string>
    <string name="setting">SETTING</string>
    <string name="username">USERNAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="update">Update</string>
    <string name="show_questions">Show Questions</string>
    <string name="add_question">Add Question</string>
    <string name="submit">SUBMIT</string>
    <string name="score_value">Your Score is </string>
    <string name="next">Next</string>
    <string name="already_user">Already user</string>
    <string name="enrolled">Enrolled</string>
    <string name="all_courses">All Courses</string>
    <string name="logout">Logout</string>
    <string name="update_course">UPDATE COURSE</string>
    <string name="delete_course">DELETE COURSE</string>
    <string name="enter_word_here">Enter word here</string>
    <string name="select_answer">Select Answer</string>
    <string name="create_question">Create Question</string>
    <string name="enter_question_here">Enter question here</string>
    <string name="comments">Comments</string>
    <string name="talk">Talk</string>
    <string name="Password_at_least_4_chars">Password at least 4 chars</string>
    <string name="Please_enter_a_valid_email">Please enter a valid email</string>
    <string name="Please_select_user_type">Please select user type</string>
    <string name="Please_enter_right_password">Please enter right password</string>
    <string name="Please_enter_right_email">Please enter right email</string>
    <string name="Course_has_been_created">Course has been created</string>
    <string name="no_internet">no internet connection</string>
    <string name="Please_enter_course_info">Please enter course info</string>
    <string name="enter_valid_data">Please enter a valid data</string>
    <string name="enter_a_valid_email">Please enter a valid email</string>
    <string name="Please_enter_username">Please enter username</string>
    <string name="no_question_type_selected">No Question Type Selected</string>
    <string name="mcq">MCQ</string>
    <string name="ture_false"><![CDATA[True & False]]></string>
    <string name="speech_word">Speech Word</string>
    <string name="Please_check_an_answer">Please check an answer</string>
    <string name="dont_leave_any_question_empty">Please don\'t leave any question empty</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="dont_leave_ques_desc_empty">Please don\'t leave question description empty</string>
    <string name="please_select_answer">Please select answer</string>
    <string name="exc_you_said_word_right">Excellent you said the word right!</string>
    <string name="try_again">try again</string>
    <string name="heard_nothing">Heard nothing</string>
    <string name="say">Say</string>
    <string name="your_score_is">Your Score is \n</string>
    <string name="no_quizes_availables">No Available games</string>
    <string name="enter_game_desc">Please enter game description</string>
    <string name="enter_game_name">Please enter game name</string>
    <string name="game_has_created">Game has been created</string>

</resources>
